--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         },
         "data": {
             "team": {
-                "name": "Chennai Super Kings 2010, 2011, 2018, 2021, 2023 Official Team Site",
+                "name": "Chennai Super Kings",
                 "logo": "https://documents.iplt20.com/ipl/CSK/logos/Logooutline/CSKoutline.png",
                 "winning_years": [
                     "2010, 2011, 2018, 2021, 2023"
@@ -465,7 +465,7 @@
         },
         "data": {
             "team": {
-                "name": "Delhi Capitals Official Team Site",
+                "name": "Delhi Capitals",
                 "logo": "https://documents.iplt20.com/ipl/DC/Logos/LogoOutline/DCoutline.png",
                 "winning_years": [],
                 "captain": "Axar Patel",
@@ -610,7 +610,7 @@
         },
         "data": {
             "team": {
-                "name": "Gujarat Titans 2022 Official Team Site",
+                "name": "Gujarat Titans",
                 "logo": "https://documents.iplt20.com/ipl/GT/Logos/Logooutline/GToutline.png",
                 "winning_years": [
                     "2022"
@@ -757,7 +757,7 @@
         },
         "data": {
             "team": {
-                "name": "Kolkata Knight Riders 2012, 2014, 2024 Official Team Site",
+                "name": "Kolkata Knight Riders",
                 "logo": "https://documents.iplt20.com/ipl/KKR/Logos/Logooutline/KKRoutline.png",
                 "winning_years": [
                     "2012, 2014, 2024"
@@ -904,7 +904,7 @@
         },
         "data": {
             "team": {
-                "name": "Lucknow Super Giants Official Team Site",
+                "name": "Lucknow Super Giants",
                 "logo": "https://documents.iplt20.com/ipl/LSG/Logos/Logooutline/LSGoutline.png",
                 "winning_years": [],
                 "captain": "Rishabh Pant",
@@ -1049,7 +1049,7 @@
         },
         "data": {
             "team": {
-                "name": "Mumbai Indians 2013, 2015, 2017, 2019, 2020 Official Team Site",
+                "name": "Mumbai Indians",
                 "logo": "https://documents.iplt20.com/ipl/MI/Logos/Logooutline/MIoutline.png",
                 "winning_years": [
                     "2013, 2015, 2017, 2019, 2020"
@@ -1196,7 +1196,7 @@
         },
         "data": {
             "team": {
-                "name": "Punjab Kings Official Team Site",
+                "name": "Punjab Kings",
                 "logo": "https://documents.iplt20.com/ipl/PBKS/Logos/Logooutline/PBKSoutline.png",
                 "winning_years": [],
                 "captain": "Shreyas Iyer",
@@ -1341,7 +1341,7 @@
         },
         "data": {
             "team": {
-                "name": "Rajasthan Royals 2008 Official Team Site",
+                "name": "Rajasthan Royals",
                 "logo": "https://documents.iplt20.com/ipl/RR/Logos/RR_Logo.png",
                 "winning_years": [
                     "2008"
@@ -1488,7 +1488,7 @@
         },
         "data": {
             "team": {
-                "name": "Royal Challengers Bengaluru 2025 Official Team Site",
+                "name": "Royal Challengers Bengaluru",
                 "logo": "https://documents.iplt20.com/ipl/RCB/Logos/Logooutline/RCBoutline.png",
                 "winning_years": [
                     "2025"
@@ -1635,7 +1635,7 @@
         },
         "data": {
             "team": {
-                "name": "Sunrisers Hyderabad 2016 Official Team Site",
+                "name": "Sunrisers Hyderabad",
                 "logo": "https://documents.iplt20.com/ipl/SRH/Logos/Logooutline/SRHoutline.png",
                 "winning_years": [
                     "2016"
